IDEMPIERE-3798 warning deprecated constructor